@@ -6,25 +6,25 @@
   </lines>
   <stations>
     <!-- https://es.wikipedia.org/wiki/Línea_1_(Metro_de_Málaga)  -->
-    <station id="L1-01" name="El Perchel" line="L1" link="L1-02,L2-01"/>
-    <station id="L1-02" name="La Unión" line="L1" link="L1-01,L1-03"/>
-    <station id="L1-03" name="Barbarela" line="L1" link="L1-02,L1-04"/>
-    <station id="L1-04" name="Carranque" line="L1" link="L1-03,L1-05"/>
-    <station id="L1-05" name="Portada Alta" line="L1" link="L1-04,L1-06"/>
-    <station id="L1-06" name="Ciudad de la Justicia" line="L1" link="L1-05,L1-07"/>
-    <station id="L1-07" name="Universidad" line="L1" link="L1-06,L1-08"/>
-    <station id="L1-08" name="Clínico" line="L1" link="L1-07,L1-09"/>
-    <station id="L1-09" name="El Cónsul" line="L1" link="L1-08,L1-10"/>
-    <station id="L1-10" name="Paraninfo" line="L1" link="L1-09,L1-11"/>
-    <station id="L1-11" name="Andalucía Tech" line="L1" link="L1-10"/>
+    <station id="L1-01" name="El Perchel" line="L1:1" link="L1-02,L2-01"/>
+    <station id="L1-02" name="La Unión" line="L1:2" link="L1-01,L1-03"/>
+    <station id="L1-03" name="Barbarela" line="L1:3" link="L1-02,L1-04"/>
+    <station id="L1-04" name="Carranque" line="L1:4" link="L1-03,L1-05"/>
+    <station id="L1-05" name="Portada Alta" line="L1:5" link="L1-04,L1-06"/>
+    <station id="L1-06" name="Ciudad de la Justicia" line="L1:6" link="L1-05,L1-07"/>
+    <station id="L1-07" name="Universidad" line="L1:7" link="L1-06,L1-08"/>
+    <station id="L1-08" name="Clínico" line="L1:8" link="L1-07,L1-09"/>
+    <station id="L1-09" name="El Cónsul" line="L1:9" link="L1-08,L1-10"/>
+    <station id="L1-10" name="Paraninfo" line="L1:10" link="L1-09,L1-11"/>
+    <station id="L1-11" name="Andalucía Tech" line="L1:11" link="L1-10"/>
 
     <!-- https://es.wikipedia.org/wiki/Línea_2_(Metro_de_Málaga) -->
-    <station id="L2-01" name="El Perchel" line="L2" link="L2-02,L1-01"/>
-    <station id="L2-02" name="La Isla" line="L2" link="L2-01,L2-03"/>
-    <station id="L2-03" name="Princesa-Huelin" line="L2" link="L2-02,L2-04"/>
-    <station id="L2-04" name="El Torcal" line="L2" link="L2-03,L2-05"/>
-    <station id="L2-05" name="La Luz-La Paz" line="L2" link="L2-04,L2-06"/>
-    <station id="L2-06" name="Puerta Blanca" line="L2" link="L2-05,L2-07"/>
-    <station id="L2-07" name="Palacio de los Deportes" line="L2" link="L2-06"/>
+    <station id="L2-01" name="El Perchel" line="L2:1" link="L2-02,L1-01"/>
+    <station id="L2-02" name="La Isla" line="L2:2" link="L2-01,L2-03"/>
+    <station id="L2-03" name="Princesa-Huelin" line="L2:3" link="L2-02,L2-04"/>
+    <station id="L2-04" name="El Torcal" line="L2:4" link="L2-03,L2-05"/>
+    <station id="L2-05" name="La Luz-La Paz" line="L2:5" link="L2-04,L2-06"/>
+    <station id="L2-06" name="Puerta Blanca" line="L2:6" link="L2-05,L2-07"/>
+    <station id="L2-07" name="Palacio de los Deportes" line="L2:7" link="L2-06"/>
   </stations>
 </tube>
