@@ -1,4 +1,5 @@
 0.16
+ - Implement station order.
  - Rewrite XML map to new version with line IDs.
 
 0.15 2015-10-16T12:05:58+02:00
